# AI-Agent-sectools

./: .env.example  .gitignore  LICENSE  MCP_QUICK_REFERENCE.md  MCP_USAGE.md  PROJECT_SUMMARY.md  README.md  mcp_auth_config.yaml  mcp_server.py  pyproject.toml  requirements.txt
config/: llm_config.yaml  safety_config.yaml  tools_config.yaml
examples/: test_agent.py  test_llm.py  test_security.py  test_tools.py
src/: __init__.py
src/core/: assets.py
src/core/agent/: __init__.py  executor.py  memory.py  models.py  orchestrator.py  planner.py  reflector.py
src/core/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  registry.py
src/knowledge/: __init__.py  vulndb.py
src/mcp/: __init__.py  auth.py  config.py  server.py  tools.py
src/persistence/: __init__.py  database.py  models.py
src/safety/: __init__.py  audit_logger.py  authorization.py  models.py  rate_limiter.py  scope_validator.py  security_manager.py
src/scanner/: __init__.py  dns.py  port.py  ssl.py  vuln.py  web.py
src/tools/: __init__.py  base.py  models.py  registry.py
src/tools/api/: __init__.py  rest_tester.py
src/tools/network/: __init__.py  nmap_wrapper.py
src/tools/scanner/: __init__.py  dir_bruteforce.py  port_scanner.py  ssl_scanner.py  subdomain_enum.py  vuln_scanner.py
src/tools/web/: __init__.py  scanner.py
src/utils/: __init__.py  config.py  docker_manager.py
